[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqualisys"
version = "0.1.0"
description = "Polars-first data-quality and data-validation toolkit."
authors = [{ name = "Aqualisys Maintainers", email = "maintainers@aqualisys.dev" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1.7",
    "polars>=0.20.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
    "ruff>=0.2.1",
]

[project.scripts]
aqualisys = "aqualisys.cli:run"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-vv --strict-markers"
testpaths = ["tests"]
